Recreated Django app

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 django/db.sqlite3
 
-.idea
+ncron_venv
 
 *~
 *.pyc
 .project
 .pydevproject
+.idea
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
